# openAI-codex-wrapper

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.gateway  Dockerfile.test-runner  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.test.yml  docker-compose.tunnel.yml  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  pyproject.toml
.claude/: metadata.json  settings.json
.github/workflows/: ci.yml  compat-real-codex.yml  compat.yml  deploy.yml  runner-smoke.yml
docs/: code-standards-patterns.md  code-standards.md  codebase-summary.md  deployment-guide.md  host-hardening.md  operations-runbook.md  project-overview-pdr.md  project-roadmap.md  system-architecture-modules.md  system-architecture.md
grafana/dashboards/: api-endpoints.json  codex-cli.json  system-overview.json
infra/: Caddyfile.production  otel-collector-config.yaml
infra/access-gate/: README.md
infra/alerting/: alertmanager.yml  prometheus-rules.yml
infra/backup/: Dockerfile.backup  postgres-backup.sh  postgres-restore.sh  redis-backup.sh
infra/loki/: loki-config.yml
infra/prometheus/: prometheus.yml
infra/promtail/: promtail-config.yml
infra/tempo/: tempo-config.yml
plans/260427-1358-codex-openai-wrapper/: phase-00-bootstrap.md  phase-01-auth-and-models.md  phase-02-codex-runner.md  phase-03-chat-completions.md  phase-04-responses-api.md  phase-05-jobs-and-arq.md  phase-06-rate-limit-multi-tier.md  phase-07-observability.md  phase-08-hardening.md  phase-09-openai-sdk-compat-tests.md  phase-10-deploy-hardening.md  plan.md
plans/260501-1529-admin-dashboard/: phase-01-scaffold-auth-dashboard.md  phase-02-keys-tiers.md  phase-03-jobs-audit.md  phase-04-usage-live-polish.md  plan.md
plans/260503-2006-codex-execution-modes/: phase-01-schema-and-admin-ui.md  phase-02-codex-runner-mode-dispatch.md  phase-03-sse-stream-finalization.md  phase-04-e2e-test-and-deploy.md  plan.md
plans/reports/: brainstorm-260427-1358-codex-openai-wrapper.md  brainstorm-260427-1727-open-questions-resolved.md  brainstorm-260429-0349-tool-calling-ha.md  brainstorm-260501-1529-admin-dashboard.md  brainstorm-260503-2006-codex-execution-modes.md  code-review-260504-0056-codex-execution-modes.md  tester-260427-1811-phase-00-validation.md  tester-260427-1843-phase-01-validation.md  tester-260504-0111-sse-aiohttp-regression.md
scripts/: bootstrap-host.sh  rotate-admin-token.sh  verify-codex.sh
src/: redis_client.py  settings.py
src/admin_ui/: __init__.py  audit_page_routes.py  auth.py  jobs_page_routes.py  keys_page_routes.py  prom_client.py  routes.py  templates_env.py  tiers_page_routes.py  users_page_routes.py
src/auth/: bearer.py  errors.py  hashing.py
src/chat/: error_chunk.py  id_factory.py  prompt_builder.py  stream_handler.py  sync_handler.py  tool_calling.py  usage_estimator.py
src/codex/: __init__.py  auth_session.py  events.py  exceptions.py  jsonl_parser.py  runner.py  stderr_archive.py  workspace.py
src/db/: base.py  engine.py  models.py  models_audit_log.py  models_usage_daily.py
src/gateway/: app.py  health.py  rate_limit_errors.py  rate_limit_reset_format.py  rate_limit_token_estimator.py  sse_helpers.py  ssrf_transport.py
src/observability/: alert_webhooks.py  logging.py  metrics.py  tracing.py
src/responses/: error_event.py  events_emitter.py  responses_helpers.py  stream_handler.py  sync_handler.py
src/workers/: arq_worker.py  event_publisher.py  git_clone.py  git_diff.py  janitor.py  job_handlers.py  repo_url_head_check.py
tests/: conftest.py
tests/compat/: README.md  __init__.py  conftest.py  test-python-sdk-error-and-edge-cases.py  test-python-sdk.py  test-real-codex-drift.py
tests/fixtures/: __init__.py  canned-prompts.json  mock-codex.py
tests/integration/: test_runner_smoke.py  test_sse_aiohttp_regression.py
tests/unit/: test-canned-prompts.py  test_admin_api_keys.py  test_admin_audit_endpoint.py  (+61 more)
(+102 files in other folders)
