[project]
name = "codex-wrapper"
version = "0.1.0"
description = "OpenAI-compatible API gateway that drives the Codex CLI"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "pydantic==2.9.*",
    "pydantic-settings==2.6.*",
    "sqlalchemy==2.0.*",
    "asyncpg==0.30.*",
    "psycopg[binary]==3.2.*",
    "alembic==1.13.*",
    "redis==5.2.*",
    "arq==0.26.*",
    "structlog==24.4.*",
    "prometheus-client==0.21.*",
    "opentelemetry-api==1.27.*",
    "opentelemetry-sdk==1.27.*",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-exporter-otlp==1.27.*",
    "argon2-cffi==23.1.*",
    "httpx==0.27.*",
    "email-validator==2.2.*",
    "tiktoken==0.8.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "ruff==0.7.*",
    "mypy==1.13.*",
    "types-redis",
    "aiosqlite==0.20.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "RET", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["src/db/migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "ruff==0.7.*",
    "mypy==1.13.*",
    "types-redis",
    "aiosqlite==0.20.*",
]
